# AutoSurveyGPT

./: config.py  gpt_config.py  gs_query_generator.py  pdf_finder.py  process_pdf.py  pyproject.toml  query.json  query_processor.py  requirements.txt  scholar_parser.py  website_parser.py
