[tool.poetry]
name = "autosurveygpt"
version = "0.1.1"
description = "AutoSurvey based on google scholar and abstract, depends onted version of libraries."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.13.3"
selenium = "^4.21.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
